--- a/desafios/desafio-010/desafio10.html
+++ b/desafios/desafio-010/desafio10.html
@@ -82,6 +82,6 @@
           <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
 </article>
 </main>
-<footer><p>Site criado por <a  href="https://github.com/D4v1l44" target="_blank" rel="nofollow">Pietro D'Avila</a> para prática em HTML.</p></footer>
+<footer><p>Site criado por <a  href="https://github.com/D4v1l44" target="_blank" rel="nofollow">Pietro D'Avila</a> para prática em HTML. &copy;</p></footer>
 </body>
 </html>
