--- a/exercicios-módulo-3/ex-001/fundo003.html
+++ b/exercicios-módulo-3/ex-001/fundo003.html
@@ -6,21 +6,40 @@
     <title>posição dos fundos</title>
     <style>
         div.bloco{
-             height: 100px;
-             border: 1px solid black    ;
+            height: 200px;
+            border: 1px solid black;
+            margin: 10px;
+            border-radius: 10px;
+            background-image: url('imagens/wallpaper003.jpg');
+
+        }
+        div#q1{
+            background-position: left top;
+        }
+        div#q2{
+            background-position: left center;
+        }
+        div#q3{
+            background-position: right bottom;
+        }
+        div#q4{
+            background-position: center center;
         }
 
-
     </style>
+
 </head>
 <body>
-    <div class="bloco">
+    <div class="bloco" id="q1">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q2">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q3">
+
+    </div>
+    <div class="bloco" id="q4">
 
     </div>
 </body>
