--- a/exercicios-módulo-3/ex-001/fundo004.html
+++ b/exercicios-módulo-3/ex-001/fundo004.html
@@ -3,44 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>posição dos fundos</title>
+    <title>posicionamento</title>
     <style>
-        div.bloco{
-            height: 200px;
-            border: 1px solid black;
-            margin: 10px;
-            border-radius: 10px;
-            background-image: url('imagens/wallpaper003.jpg');
-
-        }
-        div#q1{
-            background-position: left top;
-        }
-        div#q2{
+        body{
+            height: 96vh;
+            border: 1px dashed black;
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-size: 100px;
+            background-repeat: no-repeat;
             background-position: left center;
+            
         }
-        div#q3{
-            background-position: right bottom;
-        }
-        div#q4{
-            background-position: center center;
-        }
+
 
     </style>
-
 </head>
 <body>
-    <div class="bloco" id="q1">
-
-    </div>
-    <div class="bloco" id="q2">
-
-    </div>
-    <div class="bloco" id="q3">
-
-    </div>
-    <div class="bloco" id="q4">
-
-    </div>
+    
 </body>
 </html>
