--- a/exercicios-módulo-3/ex-001/fundo005.html
+++ b/exercicios-módulo-3/ex-001/fundo005.html
@@ -7,12 +7,8 @@
     <style>
         body{
             height: 96vh;
-            border: 1px dashed black;
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px;
-            background-repeat: no-repeat;
-            background-position: left center;
-            
+            background-image: url('imagens/wallpaper003.jpg');
+            background-position: center center;
         }
 
 
