--- a/exercicios-módulo-3/ex-001/fundo006.html
+++ b/exercicios-módulo-3/ex-001/fundo006.html
@@ -3,16 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>posicionamento</title>
-    <style>
-        body{
-            height: 96vh;
-            background-image: url('imagens/wallpaper003.jpg');
-            background-position: center center;
-        }
-
-
-    </style>
+    <title>Document</title>
 </head>
 <body>
     
