--- a/exercicios-módulo-3/ex-001/fundo006.html
+++ b/exercicios-módulo-3/ex-001/fundo006.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            height: 96vh;
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        main{
+            width: 400px;
+            background-color: white;
+            padding: 10px;
+            margin: auto;
+            border-radius: 13px;
+            border: 1px solid darkblue;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum odio, sequi, sunt at, sit iusto enim quod vel quae dolorem id? Non totam dolores corporis et hic, minima aperiam officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis eius maxime itaque id! Aliquam laudantium deleniti molestias, optio, quaerat nesciunt aperiam modi eligendi laboriosam voluptate beatae sequi odit sunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et optio consectetur possimus, nam quae qui quibusdam adipisci dolor iste sapiente, omnis voluptas alias sit aut fuga inventore perspiciatis, numquam error?</p>
+    </main>
 </body>
 </html>
