--- a/exercicios-módulo-3/ex-001/fundo006.html
+++ b/exercicios-módulo-3/ex-001/fundo006.html
@@ -7,14 +7,15 @@
     <style>
         body{
             height: 96vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url('imagens/wallpaper002.jpg') center center repeat fixed;
             background-size: cover;
+            
+
+            /*short-hand background
+            color >  image > position > repeat > size[size não funciona na short-hand] > attachment*/
         }
         main{
-            width: 400px;
+            max-width: 700px;
             background-color: white;
             padding: 10px;
             margin: auto;
@@ -27,7 +28,7 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum odio, sequi, sunt at, sit iusto enim quod vel quae dolorem id? Non totam dolores corporis et hic, minima aperiam officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis eius maxime itaque id! Aliquam laudantium deleniti molestias, optio, quaerat nesciunt aperiam modi eligendi laboriosam voluptate beatae sequi odit sunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et optio consectetur possimus, nam quae qui quibusdam adipisci dolor iste sapiente, omnis voluptas alias sit aut fuga inventore perspiciatis, numquam error?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum odio, sequi, sunt at, sit iusto enim quod vel quae dolorem id? Non totam dolores corporis et hic, minima aperiam officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis eius maxime itaque id! Aliquam laudantium deleniti molestias, optio, quaerat nesciunt aperiam modi eligendi laboriosam voluptate beatae sequi odit sunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et optio consectetur possimus, nam quae qui quibusdam adipisci dolor iste sapiente, omnis voluptas alias sit aut fuga inventore perspiciatis, numquam error? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque eligendi maxime omnis? Reiciendis, dicta, quasi nesciunt magnam dolorem perferendis repellat autem pariatur distinctio earum aut fugiat molestiae possimus error perspiciatis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, libero quas soluta a quibusdam qui tempore dolorem natus deleniti alias unde molestiae architecto nobis sunt nostrum ut, sit perspiciatis nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi magnam nostrum autem asperiores unde! Explicabo voluptates cum aperiam error sit, commodi minus officiis repellat alias facere. Aspernatur doloribus dicta assumenda. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odio, deleniti sunt neque velit non rerum ad doloremque, adipisci, laborum molestiae ullam necessitatibus perferendis eveniet praesentium at eum veritatis accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto necessitatibus fuga animi repellendus vitae, aperiam quod quae nulla. Mollitia esse, autem repudiandae eligendi incidunt unde quae soluta ea consequuntur sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, aperiam nulla sapiente eius voluptas atque officiis tempora suscipit aliquid quaerat nemo repellat necessitatibus. Ipsam officia libero maxime. Molestias, voluptas sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, culpa porro? Distinctio quam at soluta dignissimos. Vel ratione, a, soluta nesciunt dicta quod nostrum doloribus facilis architecto et temporibus voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nobis natus non repellendus consectetur placeat architecto porro ipsum eius impedit id dolor quas, ad sapiente perferendis provident? Distinctio, quam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus omnis, consequatur reiciendis, enim itaque sed libero repudiandae commodi recusandae quae nisi maiores deleniti optio dicta. Aut maxime velit enim cumque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus aut rem ducimus, enim ea nihil quasi doloribus error aperiam exercitationem officia quod necessitatibus dolore sequi impedit praesentium iusto odio dolorum!    </p>
     </main>
 </body>
 </html>
