--- a/exercicios-módulo-4/Iframe-local.html
+++ b/exercicios-módulo-4/Iframe-local.html
@@ -10,7 +10,11 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem non aliquid magnam quis, doloremque quisquam assumenda laborum corrupti sapiente cum, quia necessitatibus rerum pariatur, repellat quo. Corporis accusamus temporibus quisquam.</p>
     
-<iframe src="pag-001.html" frameborder="0" height="500" width="500"></iframe>
+<iframe src="pag-001.html" frameborder="0" height="500" width="500">
+
+    <p>Infelizmente, seu navegador não suporta Iframes</p>
+
+</iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum velit voluptas commodi magnam libero, alias aperiam inventore eos repellat laudantium laborum nesciunt deserunt, impedit quos mollitia ipsum, corrupti rem.</p>
 </body>
