--- a/exercicios-módulo-4/Iframe001.html
+++ b/exercicios-módulo-4/Iframe001.html
@@ -10,7 +10,7 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem non aliquid magnam quis, doloremque quisquam assumenda laborum corrupti sapiente cum, quia necessitatibus rerum pariatur, repellat quo. Corporis accusamus temporibus quisquam.</p>
     
-<iframe src="pag-001.html" frameborder="0" height="500" width="500">
+<iframe src="pag-extras/pag-001.html" frameborder="0" height="500" width="500">
 
     <p>Infelizmente, seu navegador não suporta Iframes </p>
 
