--- a/desafios/desafio-014/redes-sociais.html
+++ b/desafios/desafio-014/redes-sociais.html
@@ -10,9 +10,15 @@
 <body>  
     <main>
         <section id="telefone">
+            <iframe name="tela" id="tela" src="home.html" frameborder="0"></iframe>
         </section>
-        <section id="madeira">
-        
+        <section id="redes-sociais">
+        <a href="home.html" target="tela"><img src="estilos/imagens/logo-home.jpg" alt="home"></a><br>
+        <a href="instagram.html" target="tela"><img src="estilos/imagens/logo-instagram.jpg" alt="instagram"></a><br>
+        <a href="twitter.html" target="tela"><img src="estilos/imagens/logo-twitter.jpg" alt="twitter"></a><br>
+        <a href="github.html" target="tela"><img src="estilos/imagens/logo-github.jpg" alt="gihub"></a><br>
+        <a href="facebook.html" target="tela"><img src="estilos/imagens/logo-facebook.jpg" alt="facebook"></a><br>
+        <a href="youtube.html" target="tela"><img src="estilos/imagens/logo-youtube.jpg" alt="youtube "></a>
         </section>
     </main>
 </body>
