--- a/exercicios-módulo-4/forms/forms.html
+++ b/exercicios-módulo-4/forms/forms.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formularios</title>
+    <style>
+        *{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>meu primeiro formulario</h1>
+    <form method="post" action="cadastro.php" autocomplete="off">  
+        <p><label for="iNOME">NOME: </label>
+            <br>
+            <input type="text" name="NOME" id="iNOME"></p>
+        <p><label for="iSOBRENOME">SOBRENOME:</label>
+            <br>
+            <input type="text" name="SOBRENOME" id="iSOBRENOME">
+            <p><input type="submit" value="enviar"></p>
+    </form>
 </body>
 </html>
