--- a/projetos/maior-brasil-c/index.html
+++ b/projetos/maior-brasil-c/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
         <button id="btn1"><a href="boa.html">São paulo </a></button>
-        <button id="btn2"><a href="como.html">palmeiras</a></button>
+        <button id="btn2"><a href="como.html">corinthians</a></button>
     </div>
     <script src="script.js"></script>
 </body>
