--- a/projetos/maior-brasil-c/boa.html
+++ b/projetos/maior-brasil-c/boa.html
@@ -11,8 +11,8 @@
             justify-content: center;
             align-items: center;
             height: 100%;
-            background: rgb(255,64,38);
-            background: linear-gradient(102deg, rgba(255,64,38,0.9268499636182598) 51%, rgba(149,29,29,1) 100%);
+            background: rgb(255,0,0);
+            background: linear-gradient(102deg, rgba(255,0,0,1) 43%, rgba(0,0,0,1) 57%);
             margin: 0; 
         }
 
