--- a/projetos/maior-brasil-c/boa.html
+++ b/projetos/maior-brasil-c/boa.html
@@ -11,9 +11,10 @@
             justify-content: center;
             align-items: center;
             height: 100%;
-            background: rgb(255,0,0);
-            background: linear-gradient(102deg, rgba(255,0,0,1) 43%, rgba(0,0,0,1) 57%);
+            background-color: rgb(255,0,0);
+            background-image: linear-gradient(102deg, rgba(255,0,0,1) 48%, rgba(145,0,0,1) 52%);
             margin: 0; 
+            background-size: contain;
         }
 
         h1 {
