AGR SIM COMPLETo

--- a/jogo001/index.html
+++ b/jogo001/index.html
@@ -16,7 +16,7 @@
    <h1 id="h1" class='center'>O Primeiro jogo</h1> 
    <nav> 
     <ul>
-      <li><a class="link_li" class="link" href="#">Home</a></li>
+      <li><a id="home" class="link_li" class="link" href="#">Home</a></li>
       <li><a class="link_li" class="link" href="#">Mais</a></li>
       <li><a class="link_li" class="link" href="#">Curiosidades</a></li>
       <li><a class="link_li" class="link" href="#">Fale Conosco</a></li>
