--- a/projetos/weather-app/index.html
+++ b/projetos/weather-app/index.html
@@ -23,7 +23,7 @@
             <div class="col-text">
                 
                 <p id="humidity">50%</p>
-                <p>humidity</p>
+                <p>humidade</p>
             </div>
             </div>
             <div class="col">
@@ -31,13 +31,13 @@
             <div class="col-text">
                 
                 <p id="wind">15 Km/H</p>
-                <p>Wind Speed</p>
+                <p>vel. vento</p>
             </div>
             </div>
         </div>
     </div>
     <div id="footer">
-        <p id="alert">the greater the coverage of a country, the more accurate the results will be</p>
+        <p id="alert">quanto maior a cobertura do país, mais preciso o resultado</p>
         <p>feito por: Pietro d'avila</p>
     </div>
     <script src="script.js"></script>
