--- a/projetos/weather-app/index.html
+++ b/projetos/weather-app/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
     <div id="card">
         <div id="search">
-            <input type="text" name="txt" id="itxt" placeholder="Search City" spellcheck="false">
+            <input type="text" name="txt" id="itxt" placeholder="Insira uma cidade ou país" spellcheck="false">
             <button><i class="fa-solid fa-magnifying-glass" id="search_btn"></i></button>
         </div>
         <div id="weather"><img src="" id="weather-img">
