--- a/projetos/e-commerce-store/index.html
+++ b/projetos/e-commerce-store/index.html
@@ -25,25 +25,25 @@
         <section id="products">
             <h2>Produtos avulsos</h2>
             <section id="produtos-sem-kit">
-                <div class="product">   
+                <div class="product" data-product-id="1">   
                     <img src="imgs/prod-avulso-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(1)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(1)">Descrição do produto</button>
                 </div>
-                <div class="product">
+                <div class="product"  data-product-id="2">
                     <img src="imgs/prod-avulso-2.jpg" alt="">
                     <p>R$140,00</p>
                     <button onclick="addToCart(2)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(2)">Descrição do produto</button>
                 </div>
-                <div class="product">
+                <div class="product"  data-product-id="3">
                     <img src="imgs/prod-avulso-3.jpg" alt="">
                     <p>R$140,00</p>
                     <button onclick="addToCart(3)">Adicionar ao carrinho</button>
                     <button onclick="viewDetails(3)">Descrição do produto</button>
                 </div>
-                <div class="product">
+                <div class="product"  data-product-id="4">
                     <img src="imgs/prod-avulso-4.jpg" alt="">
                     <p>R$140,00</p>
                     <button onclick="addToCart(4)">Adicionar ao carrinho</button><br>
@@ -52,13 +52,13 @@
             </section>
             <h2>Kit Espiral</h2>
             <section id="kit-espiral">
-                <div class="product">
+                <div class="product"  data-product-id="5">
                     <img src="imgs/kit-espiral-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(5)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(5)">Descrição do produto</button>
                 </div>
-                <div class="product">
+                <div class="product"  data-product-id="6">
                     <img src="imgs/kit-espiral-2.jpg" alt="">
                     <p>R$140,00</p>
                     <button onclick="addToCart(6)">Adicionar ao carrinho</button>
@@ -67,13 +67,13 @@
             </section>
             <h2>Kit Cristal</h2>
             <section id="kit-cristal">
-                <div class="product">
+                <div class="product"  data-product-id="7">
                     <img src="imgs/kit-cristal-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(7)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(7)">Descrição do produto</button>
                 </div> 
-            <div class="product">
+            <div class="product"  data-product-id="8">
                 <img src="imgs/kit-cristal-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(8)">Adicionar ao carrinho</button>
@@ -82,13 +82,13 @@
             </section>
             <h2>Kit Square</h2>
             <section id="kit-square">
-                <div class="product">
+                <div class="product" data-product-id="9">
                     <img src="imgs/kit-square-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(9)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(9)">Descrição do produto</button>
                 </div>
-            <div class="product">
+            <div class="product" data-product-id="10">
                 <img src="imgs/kit-square-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(10)">Adicionar ao carrinho</button>
@@ -97,13 +97,13 @@
             </section>
             <h2>Kit Hexagono</h2>
             <section id="kit-hexagono">
-                <div class="product">
+                <div class="product" data-product-id="11">
                     <img src="imgs/kit-hexa-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(11)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(11)">Descrição do produto</button>
                 </div>
-            <div class="product">
+            <div class="product" data-product-id="12">
                 <img src="imgs/kit-hexa-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(12)">Adicionar ao carrinho</button>
@@ -112,19 +112,19 @@
             </section>
             <h2>Kit Jack</h2>
             <section id="kit-jack">
-                <div class="product">
+                <div class="product" data-product-id="13">
                     <img src="imgs/kit-jack-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(13)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(13)">Descrição do produto</button>
                 </div>
-            <div class="product">
+            <div class="product" data-product-id="14">
                 <img src="imgs/kit-jack-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(14)">Adicionar ao carrinho</button>
                 <button onclick="viewDetails(14)">Descrição do produto</button>
             </div>
-            <div class="product">
+            <div class="product" data-product-id="15">
                 <img src="imgs/kit-jack-3.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(15)">Adicionar ao carrinho</button>
@@ -133,25 +133,25 @@
             </section>    
             <h2>Kit Harley</h2>
             <section id="kit-harley">
-                <div class="product">
+                <div class="product" data-product-id="16">
                     <img src="imgs/kit-harley-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(16)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(16)">Descrição do produto</button>
                 </div>
-            <div class="product">
+            <div class="product" data-product-id="17">
                 <img src="imgs/kit-harley-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(17)">Adicionar ao carrinho</button>
                 <button onclick="viewDetails(17)">Descrição do produto</button>
             </div>
-            <div class="product">
+            <div class="product" data-product-id="18">
                 <img src="imgs/kit-harley-3.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(18)">Adicionar ao carrinho</button>
                 <button onclick="viewDetails(18)">Descrição do produto</button>
             </div>
-            <div class="product">
+            <div class="product" data-product-id="19">
                 <img src="imgs/kit-harley-4.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(19)">Adicionar ao carrinho</button>
@@ -160,13 +160,13 @@
             </section>      
             <h2>Kit Paris</h2>
             <section id="kit-paris">
-                <div class="product">
+                <div class="product" data-product-id="20">
                     <img src="imgs/kit-paris-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(20)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(20)">Descrição do produto</button>
                 </div>
-            <div class="product">
+            <div class="product" data-product-id="21">
                 <img src="imgs/kit-paris-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(21)">Adicionar ao carrinho</button>
@@ -175,13 +175,13 @@
             </section>
             <h2>Kit Paris - 2</h2>
             <section id="kit-paris-2">
-                <div class="product">
+                <div class="product" data-product-id="22">
                     <img src="imgs/kit-paris;2-1.jpg">
                     <p>R$135,00</p>
                     <button onclick="addToCart(22)">Adicionar ao carrinho</button><br>
                     <button onclick="viewDetails(22)">Descrição do produto</button>
                 </div>
-            <div class="product">
+            <div class="product" data-product-id="23">
                 <img src="imgs/kit-paris;2-2.jpg" alt="">
                 <p>R$140,00</p>
                 <button onclick="addToCart(23)">Adicionar ao carrinho</button>
