--- a/desafios/desafio-016/desafio-login.html
+++ b/desafios/desafio-016/desafio-login.html
@@ -14,7 +14,7 @@
             <div id="imagem">
                 <!-- Aqui vai a imagem nas CSS -->
             </div>
-            <div id="formulario">
+            <div id="form"></div>
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
@@ -30,7 +30,7 @@
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html" class="botao">
-                        Esqueci a senha <i class="material-icons">mail</i>
+                    Esqueci a senha <i class="material-icons">mail</i>
                     </a>
                 </form>
             </div>
