--- a/projetos/e-commerce-store/home/home.html
+++ b/projetos/e-commerce-store/home/home.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     
+    <header>
+        <a href="../home.html"><img src="../imgs/logo.jpg" id="logo"></a>
+        <h1>D&L Aromas</h1>
+            <nav>
+                <a href="home.html">Início</a>
+                <a href="suporte.html">Suporte</a>
+                <a href="produtos.html">produtos</a>
+            </nav>
+    </header>
     <script src="assets/home.js"></script>
 </body>
 </html>
