--- a/projetos/e-commerce-store/produtos/produtos.html
+++ b/projetos/e-commerce-store/produtos/produtos.html
@@ -8,11 +8,17 @@
     <title>Produtos D&L aromas</title>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/mq.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 </head>
 
 <body>
     <header>
         <a href="../home.html"><img src="../imgs/logo.jpg" id="logo"></a>
+        <button id="createaccount">Criar conta <span id="createIcon" class="material-symbols-outlined">
+            person
+            </span></button>
+        <button id="logIn">Entrar <span id="loginIcon" class="material-symbols-outlined">login</span></button>
         <h1>D&L Aromas</h1>
             <nav>
                 <a href="home.html">Início</a>
