--- a/projetos/youtube2.0/home/home.html
+++ b/projetos/youtube2.0/home/home.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>youtube</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <div id="videos-em-destaque"></div>
+    <script src="assets/script.js"></script>
 </body>
 </html>
