--- a/projetos/e-commerce-store/produtos/produtos.html
+++ b/projetos/e-commerce-store/produtos/produtos.html
@@ -10,9 +10,26 @@
     <link rel="stylesheet" href="assets/mq.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
-</head>
+    <script defer src="assets/script.js"></script>
 
+</head>
 <body>
+        
+    <form action="" method="get" id="form">
+        <div class="formElement">
+            <h1>Cadastre-se:</h1>
+            <label for="name">Nome Completo</label>
+            <input type="text" name="name" id="name" required><br>
+            <label for="dateN">Data de Nascimento</label>
+            <input type="date" name="dateN" id="dateN" required><br>
+            <span id="errorBirth" style="color: red;"></span>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" required><br>
+            <label for="pass">Senha</label>
+            <input type="password" name="pass" id="pass" autocapitalize="off" minlength="8" required><br>
+            <input type="submit" value="Cadastrar" id="enviar"><br>
+        </div>
+    </form>
     <header>
         <a href="../home.html"><img src="../imgs/logo.jpg" id="logo"></a>
         <button id="createaccount">Criar conta <span id="createIcon" class="material-symbols-outlined">
@@ -183,7 +200,38 @@
     <footer>
 <p>em caso de problemas com a compra, entre em contato em: +55 (11) 94633-1111</p>
     </footer>
-
-    <script src="assets/script.js"></script>
+    <!--
+        <label for="address">Endereço</label>
+        <select name="address" id="address">
+            <option value="AC">Acre</option>
+            <option value="AL">Alagoas</option>
+            <option value="AP">Amapá</option>
+            <option value="AM">Amazonas</option>
+            <option value="BA">Bahia</option>
+            <option value="CE">Ceará</option>
+            <option value="DF"><b>Destrito Federal</b></option>
+            <option value="ES">Espírito Santo</option>
+            <option value="GO">Goiás</option>
+            <option value="MA">Maranhão</option>
+            <option value="MT">Mato Grosso</option>
+            <option value="MS">Mato Grosso</option>
+            <option value="MG">Minas Gerais</option>
+            <option value="PA">Pará</option>
+            <option value="PB">Paraíba</option>
+            <option value="PR">Paraná</option>
+            <option value="PE">Pernambuco</option>
+            <option value="PI">Piauí</option>
+            <option value="RJ">Rio de Janeiro</option>
+            <option value="RN">Rio Grande do Norte</option>
+            <option value="RS">Rio Grande do Sul</option>
+            <option value="RO">Rondônia</option>
+            <option value="RR">Roraima</option>
+            <option value="SC">Santa Catarina</option>
+            <option value="SP">São Paulo</option>
+            <option value="SE">Sergipe</option>
+            <option value="TO">Tocantins</option>
+        </select>
+   
+-->
 </body>
 </html>
